# py_stocktotum

./: .gitignore  pyproject.toml
public/: index.html
py_stocktotum/: __main__.py
py_stocktotum/alphvant/: __init__.py  browse_symbols.py  cache.py  timeseries.py
py_stocktotum/common/: __init__.py  yf.py
py_stocktotum/hull/: chapter1.py  options.py
py_stocktotum/hull/c3/: c3.py  notes.md
py_stocktotum/hull/c4/: notes.md
py_stocktotum/quant/: __init__.py
py_stocktotum/quant/moving_average_crossover/: __init__.py  moving_average_crossover_1.py
py_stocktotum/server/: server.py  start.py
py_stocktotum/ud/basic/: basic.py  bonds.py  notes.md  sandbox.py
py_stocktotum/ud/sec11/: brownian.py
py_stocktotum/ud/sec13/: black_scholes.py  monte_carlo.py  option_mc.py
py_stocktotum/ud/sec14/: value_at_risk.py  var_mc.py
py_stocktotum/ud/sec6/: notes.md  sandbox.py
py_stocktotum/ud/sec7/: NormalReturns.py  sandbox.py
py_stocktotum/ud/sec8/: sandbox.py
py_stocktotum/ud_q/: ema.py  sma.py
stack/exec/: run_without_docker.sh
test/sbox_scripts/: markov_chain_sim.py
